--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceFolder}/cmd/server/main.go"
+            "program": "${workspaceFolder}/cmd/ws_rev/main.go"
         }
     ]
 }
